--- a/Kaiserreich Korean Translation/localisation/KR_Hungary_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Hungary_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Parties ###
 HUN_totalist_party:0 "TP"
@@ -26,11 +26,12 @@ HUN_national_populist_party_long:0 "Magyar Élet Pártja"
 
 ### Status of Hungary ###
 kr.hungary.1.t:0 "Hungary in 1936"
-kr.hungary.1.d:0 "Before 1914 the Kingdom of Hungary regarded itself as a Great Power in its own right, as it constituted one half of the powerful Habsburg Dual-Monarchy. Victory in the Weltkrieg bought the Kingdom territorial gains at the expense of Serbia and Romania, but not the dominant position in the East that the Hungarians expected. While its agrarian economy has not fared well in the face of cheap grain from the new Eastern Kingdoms (particularly Ukraine), the political troubles in Austria and the weak Imperial authority under the adolescent Emperor Otto has allowed the Magyars to follow a more independent line.A Hungarian national army has been formed, and a new strain of aggressive and expansionist nationalism, determined to ‘Magyarise' the divided peoples of the Balkans, has come to the fore of Hungarian politics. While German meddling in 1927 prevented the Hungarians from cementing their dominant position in the Dual Monarchy, the next Ausgleich renegotiation should be the time when the whole of the Crown Lands of St. Stephen will finally be restored to the Magyar nation."
+kr.hungary.1.d:0 "Before 1914 the Kingdom of Hungary regarded itself as a Great Power in its own right, as it constituted one half of the powerful Habsburg Dual-Monarchy. Victory in the Weltkrieg bought the Kingdom territorial gains at the expense of Serbia and Romania, but not the dominant position in the East that the Hungarians expected. While its agrarian economy has not fared well in the face of cheap grain from the new Eastern Kingdoms (particularly Ukraine), the political troubles in Austria and the weak Imperial authority under the adolescent Emperor Otto has allowed the Magyars to follow a more independent line.A Hungarian national army has been formed, and a new strain of aggressive and expansionist nationalism, determined to 'Magyarise' the divided peoples of the Balkans, has come to the fore of Hungarian politics. While German meddling in 1927 prevented the Hungarians from cementing their dominant position in the Dual Monarchy, the next Ausgleich renegotiation should be the time when the whole of the Crown Lands of St. Stephen will finally be restored to the Magyar nation."
 kr.hungary.1.a:0 "Okay."
 
 ### Austria civil war ###
 kr.hungary.2.t:0 "A new leader"
 kr.hungary.2.d:0 "The moment war was declared against our former suppressor Austria we needed a new leader for our Government. He will lead us to victory!"
 kr.hungary.2.a:0 "István Bethlen leads the nation"
+
 
