--- a/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
@@ -233,7 +233,7 @@ mittel.41.a:0 "우리의 항복을 제안한다"
 mittel.41.b:0 "우린 항복하지 않는다!"
 mittel.42.t:0 "중앙아프리카가 항복하다!"
 mittel.42.d:0 "독일 약골들은 우리의 영광스런 군대에 의해 패배했다! 우리는 마침내 1918년의 복수를 하였으며 ‘분홍 지도’상의 우리가 오랫동안 갈망하던 최고의 염원을 실현할 수 있게 되었다. 포르벡스란트와 은자사란트를 요구하는 것은, 새로운 포르투갈 제국의 시작이다!
-mittel.42.a:0 "포르투갈	!"
+mittel.42.a:0 "포르투갈 만세!"
 mittel.43.t:0 "케냐타-졸프 추문"
 mittel.43.d:0 "흔하지 않은 사건이 독일의 최고 법정에 도달하였다. 반-식민주의 행동가 조모 케냐타가 전 아프리카 총독이었던 빌헬름 졸프에게 집단 소송을 걸었기 때문이다. 이 사건은 곧 추문으로 변질되었는데, 원고들 중 몇몇은 대전의 참전자였으며, 이는 쉽게 무시될 수 없게 되었다. 그들은 졸프의 통치동안 불법적인 영토 압류와 함께 심지어 납치 고문을 진행했으며 이는 졸프의 지식과 희미한 법적 뒷받침을 통해 수행되어 그들에게 피해를 입혔다고 주장했다. 놀랍게도, 외무성은 정부에 이런 일들은 우리의 식민 통치를 위해서는 흔하며 필요하다며 설명했다. 그들은 우리에게 이 움직임을 잠재울 것을 강하게 권고한다."
 mittel.43.a:0 "이 법정에서 중앙아프리카의 일을 처벌할 권리는 없다."
@@ -242,52 +242,52 @@ mittel.44.t:0 "케냐타-졸프 추문"
 mittel.44.d:0 "재앙이다! 우리는 조모 케냐타의 소송 과정을 초조한 예상과 함께 몇 년 동안 지켜보았으며, 이제 우리의 최악의 공포가 실체화되었다. 전 총독이였던 빌헬름 졸프는 총독의 지위에서 ‘초법적’인 행위를 한 책임이 있음이 증명되었다. 이 충격은 졸프에게 파괴적일 뿐만 아니라, 이론적으로 무한한 사건들을 향한 문을 열었다. 이미, 폰 괴링 총독은 시위 중 사임하였다. 이 여파로, 사법적 개혁과 조금 더 ‘정상화’된 아프리카의 통치가 유일한 방법으로 간주되고 있으며, 테오도르 폰 하셀만이 운전대를 잡고 개혁을 진행하기를 기꺼이 받아들이고 있으니, 그에게 신의 가호가 있기를."
 mittel.44.a:0 "하나님이 함께 하기를"
 mittel.45.t:0 "케냐타-졸프 추문"
-mittel.45.d:0 "우리의 행정부는 키쿠유 변호사가 이끄는 전 총독 빌헬름 졸프에 대한 집단 소송인 케냐타-졸프 추문의 진행을 초조한 예상과 함께 지켜보았다. 운좋게도 변호인 칼 슈미트는 훌륭한 변호를 선보였고, 그는 새로운 판례: “통치자는 예외적 상황에서 결정한다.”를 구성해 냈다. 법원은 이 주장을 받아들였는데, 즉 총독은 아프리카에서 자주적 권한을 보유하며, 그리고 정상적인 사법적 진행을 ‘벗어날 수 있는’ 권리를 지니고 있음을 인정한 것이다. 이는 명확히 영향을 끼치고 있으며, 우리 행정부의 몇몇 구성원은 이미 열정적으로 ‘자주적 총독’을 고대하고 있다."
+mittel.45.d:0 "우리의 행정부는 키쿠유 변호사가 이끄는 전 총독 빌헬름 졸프에 대한 집단 소송인 케냐타-졸프 추문의 진행을 초조한 예상과 함께 지켜보았다. 운좋게도 변호인 칼 슈미트는 훌륭한 변호를 선보였고, 그는 새로운 판례: “통치자는 예외적 상황에서 결정한다.”를 구성해 냈다. 법원은 이 주장을 받아들였는데, 즉 총독은 아프리카에서 자주적 권한을 보유하며, 그리고 정상적인 사법적 진행을 ‘벗어날 수 있는’ 권리를 지니고 있음을 인정한 것이다. 이는 명확히 영향을 끼치고 있으며, 우리 행정부의 몇몇 구성원은 이미 열정적으로 ‘지배적 총독’을 고대하고 있다."
 mittel.45.a:0 "통치자는 예외적 상황에서 결정하는 자이다."
 mittel.46.t:0 "검은 서류"
 mittel.46.d:0 "익명의 중앙아프리카 내 장교와 행정가들이 총독 폰 괴링의 불법적 행동의 증거와 기록물들을 정리한 뒤 내각에 제출하였다. 증거는, 만일 진실이라면, 매우 심각한 것이다. 그들이 제기한 것에 따르면, 총독 폰 괴링은 너그럽게 그에게 제공한 정부 예산을 중부 유럽 연합 내 정치가들을 매수하면서 자신의 통치에 대한 지원을 확고화 하였으며, 요청된 정부 공식 예산을 비자금을 조직하는 데에 활용하였다. 더욱 암담하게도, 자료는 증거가 부족하기는 하지만, 폰 괴링과 그의 충성파들은 그의 피고용인을 협박하기 위해 정보를 수집하며, 이는 납치와 언론가 협박, 심지어 암살자의 고용에도 연관되어 있음을 제기한다!"
 mittel.46.a:0 "정식 조사가 지금 당장 이루어져야 한다!"
 mittel.46.b:0 "이는 베를린의 높으신 분에게 영향을 끼친다, 조용히 묻어라."
-mittel.47.t:0 "The corruption investigation"
-mittel.47.d:0 "It has come to our attention that Berlin has begun investigating certain financial irregularities. It is not hard to imagine who is behind this: they would have to have access to the highest level of financial planning in the Administration, likely the Alter Kämpfer who fought under von Lettow-Vorbeck, and who have resisted every change of this administration!"
-mittel.47.a:0 "Quash this investigation"
-mittel.47.b:0 "Contain von Göring, and quietly change administration"
-mittel.48.t:0 "The Kaiser's Warrant"
-mittel.48.d:0 "Seeing von Göring fiercely resist any attempt at offical investigation, the German government has seen it fit to issue an arrest warrant for the Statthalter, on the grounds of obstruction of justice."
-mittel.48.a:0 "The Sovereign is he who decides on the exception"
-mittel.48.b:0 "Fetch me a ship, I shall fight this battle in court!"
-mittel.49.t:0 "The Sovereign Statthalter"
-mittel.49.d:0 "Hermann von Göring has refused to step down. Through his intermediary Karl Schmitt, he has argued that the Statthalter is a sovereign office, able to step outside the law, and secure with loyal members of his army, we have no easy means of resolving the crisis. Having won the Kenyatta-Solf Affair, Schmitt argues that this situation takes precedence from the affair, and therefore should be subject to the same ruling."
-mittel.49.a:0 "Issue a new warrant for von Göring's arrest, for treason!"
-mittel.49.b:0 "von Göring has legal precedence, step down for now."
-mittel.50.t:0 "The German Response"
-mittel.50.d:0 "The German government has declared von Göring's administration finished, but he still holds the reigns of power for now. He has ridden the tiger of this crisis this far, and now he cannot get off. Everywhere, the chain of command breaks down."
-mittel.50.a:0 "Gott, hilf uns!"
-mittel.51.t:0 "The Black Dossier"
-mittel.51.d:0 "Not satisfied with the Cabinet's decision, the discontented officers of Africa have leaked their evidence and allegations to the press. While we are pushing back against the more wild, and baseless speculation, it's clear to the public an investigation is necessary."
-mittel.51.a:0 "Damn! It was worth a try!"
-mittel.52.t:0 "Friends in Berlin"
-mittel.52.d:0 "It seems that some of our disgruntled administrators have made an appeal directly to the German Cabinet, trying to go over von Göring's head to have him removed. Fortunately, our friends in Berlin have ensured the cabinet will take no action, for now."
-mittel.52.a:0 "Traitors in our midst, but friends in Berlin."
-mittel.53.t:0 "The Muckrackers"
-mittel.53.d:0 "While our friends in the government dismissed the accusations presented to it, it was leaked to the press. The honour of the Statthalter has been impinged, and this has given strength to the numerous journalists scuttling about Africa hoping to be the 'next E.D. Morel'"
-mittel.53.a:0 "Damn them all!"
-mittel.54.t:0 "A New Statthalter"
-mittel.54.d:0 "With von Göring gone, we must select a new Statthalter. While he is disgraced, there is still hope for a New Colonial Regime to bring order to the colony. Or, perhaps the old ways, advocated by the Deutsche Kolonialgesellschaft are best. Or lastly, reform may be the only way to prevent exactly this kind of behaviour."
-mittel.54.a:0 "The New Colonial Regime stays!"
-mittel.54.b:0 "The Old Guard knows best!"
-mittel.54.c:0 "Reform is the new way forward!"
-mittel.55.t:0 "An NKR Statthalter"
-mittel.55.d:0 "While von Göring may be disgraced, our larger colonial project for Mittelafrika remains. We still need strong, forward thinking leadership to take over. Who can we trust?"
-mittel.55.a:0 "Ernst Jünger, the famous writer and soldier!"
-mittel.55.b:0 "Send over the Old General, Franz Ritter von Epp"
-mittel.55.c:0 "Send them Fritz Thyssen, to protect business interests in Afrika"
-mittel.56.t:0 "A New Statthalter"
-mittel.56.d:0 "The Kaiser has appointed Major General Ernst Jünger as our new Statthalter. Awarded the Pour le Mérite for his service in the Weltkrieg, Jünger is something of a renaissance man. He is both an accomplished author, with his best seller “Storm of Steel” and an educated entomologist, using his time in Africa to discover and document numerous species, while introducing our Askari to 'stormtrooper tactics'. Jünger broke with the German Army after a dispute carried through a series of articles published in military journals in the mid-20s.\n\nUnable to convince the General Staff to adopt his views, he took a transfer to Africa, where he was more free to implement his theories on the importance of psychology in modern warfare. A member of the Neue Kolonialregierung, Ernst Jünger will bring what he calls a “new spirit of adventure” to the colonisation of Africa, as well as help us reform our infantry tactics."
-mittel.56.a:0 "All hail the New Statthalter!"
-mittel.57.t:0 "A New Statthalter"
-mittel.57.d:0 "The Kaiser has appointed Franz Ritter von Epp as our Statthalter. A former General and current politician, Ritter von Epp fought in the Herero uprising and the ensuing repression, and earned the Pour le Mérite for his service in the Weltkrieg. After the war, Chancellor Ludendorf appointed him as the first postwar governor of Kamerun. Returning to Germany after serving as governor for three years, Ritter von Epp turned to politics, funding the creation of several patriotic newspapers, and serving in the Bavarian chamber of Imperial Counsellors. Ritter von Epp has never tried to hide his close ties to the Ludendorf dictatorship, and remains an outspoken apologist for Ludendorf. He is a controversial, almost belligerent figure, but the Kaiser has decided a fighting man is what Africa needs. A supporter of the Neue Kolonialregierung, Franz Ritter brings years of military experience and service to his post."
-mittel.57.a:0 "Welcome to Afrika, von Epp."
+mittel.47.t:0 "부정 조사"
+mittel.47.d:0 "베를린에서 몇몇 예산과 관련된 이상점에 대한 조사를 시작한 것은 우리의 관심을 끌었다. 누가 뒤를 봐 주는지를 떠올리기는 어렵지 않다: 그들은 행정부의 가장 높은 단계의 예산 계획에 접근할 수 있고, 아마 레토프-포르벡 아래에서 종군하였으며, 이 행정부의 어떤 변화도 거부하였었던 알터 켐퍼일 것이다!"
+mittel.47.a:0 "이 조사를 중단시켜라"
+mittel.47.b:0 "폰 괴링을 억류하고, 행정부의 교체를 개시하라"
+mittel.48.t:0 "카이저의 영장"
+mittel.48.d:0 "폰 괴링이 모든 공식적 조사에 격렬히 저항하는 것을 보고, 독일 정부는 집행 방해를 막기 위해 체포 영장을 발부하는 것이 적합하다고 본다."
+mittel.48.a:0 "통치자는 예외적 상황에서 선택하는 자이다"
+mittel.48.b:0 "배를 불러라! 나는 법정에서 싸울 것이다!"
+mittel.49.t:0 "지배권을 지닌 총독"
+mittel.49.d:0 "헤르만 폰 괴링은 물러서기를 거부했다. 그의 대변인 칼 슈미츠에 따르면, 그는 총독은 지배권을 지닌 행정청이고, 초법을 할 수 있다 주장하고, 그의 충성파와 그의 군인들로 엄중히 경비하고 있는 상황에서, 우리는 이 사태를 쉽게 풀어갈 방법이 없다. 케냐타-졸프 추문에서 승소한 뒤 슈미츠는, 이 사태가 추문보다 우선하므로, 동일하게 처리하여야 한다고 주장한다."
+mittel.49.a:0 "폰 괴링을 향해 새 영장을 발부하라, 반역으로!"
+mittel.49.b:0 "폰 괴링은 법적 우선권이 있다, 지금은 물러나라"
+mittel.50.t:0 "독일의 반응"
+mittel.50.d:0 "독일 정부는 폰 괴링의 통치가 끝났음을 선언하였지만, 아직 그는 그의 통치력을 유지하고 있다. 그는 사태를 이 지경까지 복잡하게 만들었으며, 그를 무시할 수 없다. 모든 곳에서, 지휘 계통이 붕괴하고 있다."
+mittel.50.a:0 "신이여, 우리를 보우하소서!"
+mittel.51.t:0 "검은 서류"
+mittel.51.d:0 "내각의 결정에 마음이 들지 않게도, 불충한 아프리카의 장교들은 그들의 증거를 흘리고 언론에 제보했다. 우리가 상황이 심각해지지 않도록 억제하고 있음에도 불구하고, 근거 없는 추측에 따르면, 조사가 필요하다는 것이 공표될 게 뻔하다."
+mittel.51.a:0 "젠장! 시도해 볼만한 가치는 있었다!!"
+mittel.52.t:0 "베를린에 있는 친구들"
+mittel.52.d:0 "우리의 불만을 품은 행정가들 몇몇이 독일 내각에 폰 괴링을 우회하여 독일 내각에 직접 괴링의 사임을 시도하였다. 운이 좋게도, 베를린에 있는 친구들은 내각이 지금은 행동을 취하지 않을 것이라 장담했다, 지금은 말이다."
+mittel.52.a:0 "우리들 중에 반역자가 있지만, 베를린에 친구가 있다.."
+mittel.53.t:0 "언론가들"
+mittel.53.d:0 "정부의 우리 친구들이 혐의를 해결하는 동안, 그것은 언론에 새나갔다. 총독의 명예는 실추당했으며, 이는 아프리카를 방해하며 ‘또 다른 E.D 모렐’을 꿈꾸는 수많은 언론가들에게 힘을 보탰다."
+mittel.53.a:0 "모두에게 저주를!"
+mittel.54.t:0 "새로운 총독"
+mittel.54.d:0 "폰 괴링이 떠났으므로, 우리는 새로운 총독을 뽑아야 한다. 그가 실각 당했음에도, 식민지에 질서를 불러 올 새로운 식민 정부에 대한 희망이 있다. 아니면, 아마도 고전적 방법인, Deutsche Kolonialgesellschaft을 최상의 방식이라 옹호할 수 도 있다. 아니면 마지막으로, 개혁만이 이와 같은 행동을 방지할 마지막 방법일 수 도 있다."
+mittel.54.a:0 "새로운 식민 정부가 유지된다!"
+mittel.54.b:0 "보수파들은 방법을 안다!"
+mittel.54.c:0 "개혁만이 새로운 길이다!"
+mittel.55.t:0 "NKR 총독 "
+mittel.55.d:0 "폰 괴링이 실각하는 동안에도 중앙아프리카에 대한 증가한 식민지 계획은 남아있다. 우린 아직도 장악을 위한 강하고, 진취적인 리더쉽이 필요하다. 누굴 신임해야 하는가?"
+mittel.55.a:0 "유명한 작가이자 군인인 에른스트 융어!"
+mittel.55.b:0 "노장군 프란츠 리터 폰 에프를 보내라"
+mittel.55.c:0 "아프리카의 사업적 이익을 지킬 프리츠 티센을 보내라"
+mittel.56.t:0 "신임 총독"
+mittel.56.d:0 "카이저께서는 우리의 새로운 총독으로 에른스트 융어 소장을 임명하였다. 대전기의 복무를 통해 Pour le Mérite를 받았으며, 융어는 르네상스 맨으로 여겨진다. 그는 그의 베스트 셀러인 “강철의 폭풍”을 통해 성공한 작가이며, 그가 아프리카에서 머무는 동안 많은 종을 발견하고 분류한 능력있는 곤충학자이며, 그러는 동안 우리의 아스카리들에게 ‘강습병 전략’을 가르쳤다. 융어는 20세기 중반 일련의 군사 저작물로 인한 독일 군부와의 분쟁 이후로 군부와의 관계를 끊었다. \n\n그의 시각을 참모부에 반영할 수 없었으므로, 그는 그의 현대 전장에서 정신력의 중요성에 대한 이론을 각인하는 데 더 자유로운 아프리카로의 재배치를 신청했다. Neue Kolonialregierung의 멤버로서, 에른스트 융어는 그가 “새로운 탐험 정신”이라 말하는 것을 아프리카의 개척에 가져올 것이며, 우리의 보병 전략을 개혁하는 데에도 도움을 줄 것이다."
+mittel.56.a:0 "새로운 총독을 경배하라!"
+mittel.57.t:0 "신임 총독"
+mittel.57.d:0 "카이저께서는 우리의 새로운 총독으로 프란츠 리터 폰 에프를 임명하였다. 퇴역한 장군이자 현 정치가인 리터 폰 에프는 헤레로 반란과 뒤이은 진압에서 싸웠으며 대전기의 복무를 통해 Pour le Mérite를 얻었다. 전후 루덴도르프 수상은 그를 최초의 전후 카메룬 행정관으로 임명했다. 삼 년간의 행정관 업무 후 독일로 돌아왔으며, 리터 폰 에프는 정치가로 변신했으며 몇몇 애국적 신문사 창립에 자금을 지원했으며, Bavarian chamber of Imperial Counsellors 에 종사하였다. 리터 폰 에프는 그의 루덴도르프의 독재정과의 강한 연관을 숨기려 한 적이 없었으며, 활발이 발언하는 루덴도르프의 옹호자로 남아있다. 그는 논란이 많고, 적대적이지만, 카이저께서는 아프리카에는 투사가 필요하다고 결정하셨다. Neue Kolonialregierung의 지원가로써, 프란츠 리터는 수년간의 군사 복무 경험과 봉사를 그의 직위에서 보여줄 것 이다."
+mittel.57.a:0 "아프리카에 온 것을 환영합니다,폰 에프"
 mittel.58.t:0 "A New Statthalter"
 mittel.58.d:0 "The Kaiser has appointed Fritz Thyssen as our Statthalter. The owner of the United Steel Works, Thyssen is a towering figure in the world of German Commerce, having served as the head of the German Iron and Steel Industry Association and as a board member of the Reichsbank. He's also been active in politics, providing financial support to right-wing parties and newspapers. He breaks from the right however in his outspoken support for higher wages and benefits for workers. He believes, like Bismarck before him, that the threat of Socialism can be averted by assuring a decent standard of living for it's workers. Thyssen claims it has the added benefit that well paid workers can purchase more German-made products, stimulating the economy. Some are calling this model of paying workers high enough wages to purchase industrial output and ensure loyalty 'Thyssenism.' Frtitz Thyssen has long been associated with the Neue Kolonialregierung, with rumors circulating that he helped fund Hermann von Göring's rise in politics, or that he was involved in the financial slush fund alleged in the 'Black Dossier'. None of these allegations have been proven yet, and the Kaiser has appointed Thyssen to the position of Statthalter, with a special eye to increase mining output in the Congo."
 mittel.58.a:0 "Welcome to Afrika, Thyssen."
@@ -636,32 +636,32 @@ mittel.1001.b:0 "Establish security zones in Mozambique and Angola"
 mittel.1001.c:0 "Portugal has forfeited their colonial holdings with their reckless behaviour, Take it all!"
 ### Mittelpolitic ###
 
-mittelpolitic.1.t:0 "British influence"
-mittelpolitic.1.d:0 "The Royal Veterans Association; which represents white British Weltkrieg veterans, has gained influence over our government, which forces us to pay more attention to the demands of the white British settlers, yet means that more of them will join our army."
-mittelpolitic.1.a:0 "Interesting"
+mittelpolitic.1.t:0 "영국계의 영향"
+mittelpolitic.1.d:0 "백인 영국인의 대전기 참전자들을 대표하는; 왕립 참전자 협회는 우리 정부에 영향력을 지니며, 백인 영국계 정착민들의 요구에 조금 더 관심을 가지도록 하지만, 이는 그들 중 더 많은 수가 우리의 군에 복무할 것을 의미한다."
+mittelpolitic.1.a:0 "흥미롭군"
 
-mittelpolitic.2.t:0 "Strong British influence"
-mittelpolitic.2.d:0 "The Royal Veterans Association, which represents white British Weltkrieg veterans, has gained more influence over our government, which forces us to pay more attention to the demands of the white British settlers, yet means that more of them will join our army."
-mittelpolitic.2.a:0 "Perhaps we should do something?"
+mittelpolitic.2.t:0 "강한 영국계의 영향"
+mittelpolitic.2.d:0 "백인 영국인의 대전기 참전자들을 대표하는; 왕립 참전자 협회는 우리 정부에 더 큰 영향력을 지니며, 백인 영국계 정착민들의 요구에 조금 더 관심을 가지도록 하지만, 이는 그들 중 더 많은 수가 우리의 군에 복무할 것을 의미한다."
+mittelpolitic.2.a:0 "우리가 무언가 손을 써야 할까?"
 
-mittelpolitic.3.t:0 "British Condominium"
-mittelpolitic.3.d:0 "The Royal Veterans Association, which represents white British Weltkrieg veterans, has gained extremely strong influence over our government, which forces us to pay more attention to the demands of the white British settlers, yet means that more of them will join our army."
-mittelpolitic.3.a:0 "This is getting bad..."
+mittelpolitic.3.t:0 "영국계와의 공동통치"
+mittelpolitic.3.d:0 "백인 영국인의 대전기 참전자들을 대표하는; 왕립 참전자 협회는 우리 정부에 극도의 영향력을 지니며, 백인 영국계 정착민들의 요구에 조금 더 관심을 가지도록 하지만, 이는 그들 중 더 많은 수가 우리의 군에 복무할 것을 의미한다.."
+mittelpolitic.3.a:0 "상황이 나빠지는군..."
 
-mittelpolitic.4.t:0 "Flandro-Wallonian Influence"
-mittelpolitic.4.d:0 "The Association des Colons du Congo, which represents the Belgian and French investors within our territories, has gained influence over our government, which means more and more of our industry is in their hands. However, this enhances our ability to exploit the full natural wealth of Africa."
-mittelpolitic.4.a:0 "Interesting"
+mittelpolitic.4.t:0 "플랑드르-왈로니아계의 영향"
+mittelpolitic.4.d:0 "우리 영토 내의 벨기에계와 프랑스계 투자자들을 대표하는 콩고 정착민 협회는 우리 정부에 영향력을 지니며, 이는 우리 산업들이 점점 그들의 손에 장악됨을 뜻한다. 하지만, 이는 아프리카의 자원들을 최대로 활용하는 우리의 역량을 강화할 것이다."
+mittelpolitic.4.a:0 "흥미롭군"
 
-mittelpolitic.5.t:0 "Strong Flandro-Wallonian Influence"
-mittelpolitic.5.d:0 "The Association des Colons du Congo, which represents the Belgian and French investors within our territories, has gained more influence over our government, which means more and more of our industry is in their hands. However, this enhances our ability to exploit the full natural wealth of Africa."
-mittelpolitic.5.a:0 "Perhaps we should do something?"
+mittelpolitic.5.t:0 "강한 -왈로니아계의 영향"
+mittelpolitic.5.d:0 "우리 영토 내의 벨기에계와 프랑스계 투자자들을 대표하는 콩고 정착민 협회는 우리 정부에 더 큰 영향력을 지니며, 이는 우리 산업들이 점점 그들의 손에 장악됨을 뜻한다. 하지만, 이는 아프리카의 자원들을 최대로 활용하는 우리의 역량을 강화할 것이다."
+mittelpolitic.5.a:0 "우리가 무언가 손을 써야 할까?"
 
-mittelpolitic.6.t:0 "Flandro-Wallonian Condominium"
-mittelpolitic.6.d:0 "The Association des Colons du Congo, which represents the Belgian and French investors within our territories, has gained extremely strong influence over our government, which means more and more of our industry is in their hands. However, this enhances our ability to exploit the full natural wealth of Africa."
-mittelpolitic.6.a:0 "This is getting bad..."
+mittelpolitic.6.t:0 "플랑드르-왈로니아계와의 공동통치"
+mittelpolitic.6.d:0 "우리 영토 내의 벨기에계와 프랑스계 투자자들을 대표하는 콩고 정착민 협회는 우리 정부에 더 극도의 영향력을 지니며, 이는 우리 산업들이 점점 그들의 손에 장악됨을 뜻한다. 하지만, 이는 아프리카의 자원들을 최대로 활용하는 우리의 역량을 강화할 것이다."
+mittelpolitic.6.a:0 "상황이 나빠지는군..."
 
 ### Focuses ###
-MAF_New_Administration:0 "A New Administration"
+MAF_New_Administration:0 "새로운 행정부"
 MAF_New_Administration_desc:0 "In order to further assert our control over Africa, it is necessary to take inventory of our administrators and staff, and coordinate a plan of action."
 MAF_Sovereign_State:0 "A Sovereign State"
 MAF_Sovereign_State_desc:0 "Now that von Göring's position as Sovereign Statthalter has been established, it is time to turn the rest of our administration toward furthering our autonomy and authority."
