--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -210,7 +210,7 @@ annex.66.c:0 "전국노동자연합이 다시 통치하도록한다"
 annex.66.e:0 "독립된 스페인 공화국을 설립한다"
 annex.66.f:0 "점령을 계속하고 나중에 사안을 결정하자"
 annex.67.t:0 "북중국의 운명"
-annex.67.d:0 "After our successful campaign in the northern China we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.67.d:0 "북중국에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.67.a:0 "군사점령을 계속해라!"
 annex.67.b:0 "이전 황실로 복고하라!"
 annex.67.e:0 "노동 조합 연방을 세워라!"
@@ -459,35 +459,35 @@ annex.123.b:0 "우호적인 우크라이나를 해방하라!"
 annex.123.c:0 "Hand it over to our good Russian friends!"
 annex.123.e:0 "크림반도는 가지고 우크라이나를 해방하라!"
 annex.124.t:0 "남서부 중국의 운명"
-annex.124.d:0 "After our successful campaign in the South-Western China we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice...."
+annex.124.d:0 "남서부 중국에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.124.a:0 "군사점령을 계속하라!"
 annex.124.b:0 "Support the local republican movement !"
 annex.124.c:0 "윈난 공화국을 세워라!"
 annex.124.e:0 "중화인민공화국을 세워라!"
 annex.124.f:0 "충성스러운 동맹에 이 땅을 넘겨주어라..."
 annex.125.t:0 "남중국의 운명"
-annex.125.d:0 "After our successful campaign in the Southern China we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.125.d:0 "남중국에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.125.c:0 "일반 동아시아 회사를 복원해라"
 annex.125.g:0 "광시 공화국을 해방하라"
 annex.126.t:0 "티베트의 운명"
-annex.126.d:0 "After our successful campaign in the Tibetan Plateau we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.126.d:0 "티벳 고원에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.126.c:0 "독립된 티베트를 다시 만들어라"
 annex.127.t:0 "일본의 운명"
-annex.127.d:0 "After our successful campaign on the Japanese islands we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.127.d:0 "일본 열도에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.127.a:0 "군사점령을 계속하라!"
 annex.127.b:0 "독립된 일본을 다시 만들어라"
 annex.127.c:0 "홋카이도를 합병하고 일본을 독립시켜라"
 annex.127.e:0 "이오지마, 오키나와를 합병하고 일본을 독립시켜라"
 annex.128.t:0 "타이완의 운명"
-annex.128.d:0 "After our successful campaign on the island of Taiwan we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.128.d:0 "타이완 섬에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.128.c:0 "독립된 타이완을 만들어라"
 annex.129.t:0 "에티오피아의 운명"
-annex.129.d:0 "After our successful campaign in Ethiopia we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.129.d:0 "에티오피아에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.129.a:0 "군사점령을 계속해라!
 annex.129.b:0 "새로 연합된 에티오피아를 만들어라"
 annex.129.c:0 "독립된 에티오피아와 에리트레아를 해방하라"
 annex.130.t:0 "부탄의 운명"
-annex.130.d:0 "After our successful campaign in the Himalayas we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.130.d:0 "히말라야에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.130.a:0 "군사점령을 계속해라!"
 annex.130.b:0 "독립된 부탄을 복원해라"
 annex.130.c:0 "부탄을 합병해라"
@@ -516,7 +516,7 @@ annex.135.d:0 "After a campaign through the jungles and deserts of Bolivia, we h
 annex.135.a:0 "볼리비아에 친선 정부를 세우고 해방하라!"
 annex.135.b:0 "군사점령을 계속해라!"
 annex.136.t:0 "페루의 운명"
-annex.136.d:0 "After a campaign across the hostile Peruvian Andes, we have finally managed to shatter the Peruvian defences. Lima is now in our hands! We must now decide on the future of Peru"
+annex.136.d:0 "페루령 안데스 전역에 걸친 작전 끝에, 우린 마침내 페루의 방어를 무너트렸습니다. 리마는 이제 우리 손 안에 있습니다! 우리는 이제 페루의 미래를 결정해야 합니다."
 annex.136.a:0 "페루에 친선 정부를 세우고 해방하라!"
 annex.136.b:0 "군사점령을 계속해라!"
 annex.137.t:0 "에콰도르의 운명"
@@ -536,43 +536,43 @@ annex.140.d:0 "카리브해 전역에 걸친 작전 끝에, 우린 마침내 서
 annex.140.a:0 "서인도 제도에 친선 정부를 세우고 해방하라!"
 annex.140.b:0 "군사점령을 계속해라"
 annex.141.t:0 "파나마의 운명"
-annex.141.d:0 "After a rapid campaign around the Panamá Canal, we have finally managed to shatter the Panamanian defences. Panamá City is now in our hands! We must now decide on the future of Panamá."
+annex.141.d:0 "파나마 운하에서의 짧은 작전 끝에, 우리는 마침내 파나마의 방어를 무너트렸습니다. 파나마 시티는 이제 우리 손 안에 있습니다! 우리는 이제 파나마의 미래를 결정해야 합니다."
 annex.141.a:0 "파나마에 친선 정부를 세우고 해방하라!"
 annex.141.b:0 "군사점령을 계속해라"
 annex.142.t:0 "아이티의 운명"
-annex.142.d:0 "After a short campaign on the island of Hispaniola, we have finally managed to shatter the Haitian defences. Port-au-Prince is now in our hands! We must now decide on the future of Haiti."
+annex.142.d:0 "히스파니올라 섬에서의 짧은 작전 끝에, 우린 마침내 아이티의 방어를 무너트렸습니다. 포르토프랭스는 이제 우리 손 안에 있습니다! 우리는 이제 아이티의 미래를 결정해야 합니다."
 annex.142.a:0 "아이티에 친선 정부를 세우고 해방하라!"
 annex.142.b:0 "군사점령을 계속해라!"
 annex.143.t:0 "도미니카 공화국의 운명"
-annex.143.d:0 "After a short campaign on the island of Hispaniola, we have finally managed to shatter the Dominican defences. Santo Dominigo is now in our hands! We must now decide on the future of the Dominican Republic."
-annex.143.a:0 "도모니카 공화국에 친선 정부를 세우고 해방하라!"
+annex.143.d:0 "히스파니올라 섬에서의 짧은 작전 끝에, 우린 마침내 도미니카의 방어를 무너트렸습니다. 산토도밍고는 이제 우리 손 안에 있습니다! 우리는 이제 도미니카 공화국의 미래를 결정해야 합니다."
+annex.143.a:0 "도미니카 공화국에 친선 정부를 세우고 해방하라!"
 annex.143.b:0 "군사점령을 계속해라!"
 annex.144.t:0 "쿠바의 운명"
-annex.144.d:0 "After a short campaign across the island of Cuba, we have finally managed to shatter the Cuban defences. Havana is now in our hands! We must now decide on the future of Cuba."
+annex.144.d:0 "쿠바 섬에서의 짧은 작전 끝에, 우린 마침내 쿠바의 방어를 무너트렸습니다. 하바나는 이제 우리 손 안에 있습니다! 우리는 이제 쿠바의 미래를 결정해야 합니다."
 annex.144.a:0 "쿠바에 친선 정부를 세우고 해방하라!"
 annex.144.b:0 "군사점령을 계속해라!"
 annex.145.t:0 "멕시코의 운명"
-annex.145.d:0 "After a long campaign across Mexico, we have finally managed to shatter the Mexican defences. Mexico City is now in our hands! We must now decide on the future of Mexico."
+annex.145.d:0 "멕시코에서의 긴 작전 끝에, 우린 마침내 멕시코의 방어를 무너트렸습니다. 멕시코 시티는 이제 우리 손 안에 있습니다! 우리는 이제 멕시코의 미래를 결정해야 합니다."
 annex.145.a:0 "멕시코에 친선 정부를 세우고 해방하라!"
 annex.145.b:0 "군사점령을 계속해라!"
 annex.146.t:0 "칼리치아의 운명"
-annex.146.d:0 "After a short campaign across Galicia, we have managed to shatter the Galician defences. Lwow is now in our hands! We must now decide on the future of Galicia."
+annex.146.d:0 "갈리치아에서의 짧은 작전 끝에, 우린 마침내 갈리치아의 방어를 무너트렸습니다. 르보프는 이제 우리 손 안에 있습니다! 우리는 이제 갈리치아의 미래를 결정해야 합니다."
 annex.146.a:0 "갈리치아에 친선정부를 설립하고 해방하라!"
 annex.146.b:0 "폴란드 친구들에게 주어라"
 annex.146.c:0 "우크라이나 친구들에게 주어라"
 annex.146.e:0 "군사점령을 계속해라!"
 annex.147.t:0 "벨로루시의 운명"
-annex.147.d:0 "After a short campaign across Belarus, we have managed to shatter the defences of Minsk. Belorussia is now in our hands! We must now decide on the future of it."
+annex.147.d:0 "벨라루스에서의 짧은 작전 끝에, 우린 마침내 벨라루스의 방어를 무너트렸습니다. 민스크는 이제 우리 손 안에 있습니다! 우리는 이제 그들의 미래를 결정해야 합니다."
 annex.147.a:0 "벨로루시에 친선정부를 설립해라!"
 annex.147.b:0 "러시아 친구들에게 주어라"
 annex.147.c:0 "Bring them back into our sphere!"
 annex.147.e:0 "군사점령을 계속해라!"
 annex.148.t:0 "슬로바키아의 운명"
-annex.148.d:0 "After a short campaign across the mountains of Slovakia, we have managed to shatter the defences of the country. Slovakia is now in our hands! We must now decide on the future of it."
+annex.148.d:0 "슬로바키아의 산에서의 짧은 작전 끝에, 우린 마침내 방어를 무너트렸습니다. 슬로바키아는 이제 우리 손 안에 있습니다! 우리는 이제 그들의 미래를 결정해야 합니다."
 annex.148.a:0 "슬로바키아에 친선정부를 설립하고 해방하라!"
 annex.148.b:0 "군사점령을 계속해라!"
 annex.149.t:0 "트란실바니아의 운명"
-annex.149.d:0 "After a long campaign across the Transylvania, we have managed to take control of the territory. The region is now in our hands! We must now decide on the future of it."
+annex.149.d:0 "트란스바니아에서의 긴 작전 끝에, 우린 마침내 이 땅을 지배하게 되었습니다. 이 지역은 이제 우리 손 안에 있습니다! 우리는 이제 그들의 미래를 결정해야 합니다."
 annex.149.a:0 "트란실바니아에 친선정부를 설립하고 해방하라!"
 annex.149.b:0 "헝가리 친구들에게 주어라"
 annex.149.c:0 "루마니아 친구들에게 주어라"
@@ -597,7 +597,7 @@ annex.153.g:0 "Give the territory to our loyal socialist friends"
 annex.153.h:0 "Give the territory to our loyal Italian friends"
 annex.153.i:0 "Give the territory to our loyal Sardinian friends"
 annex.154.t:0 "네덜란드의 운명"
-annex.154.d:0 "After a short campaign across the marshes and the urban centres of the Netherlands, we have managed to take down the proud nation. The Netherlands are now in our hands! We must now decide on its future."
+annex.154.d:0 "네덜란드의 도시와 습지에서의 짧은 작전 끝에, 우리는 이 오만한 나라를 쓸어버렸습니다. 네덜란드는 이제 우리 손 안에 있습니다! 우리는 그들의 미래를 결정해야 합니다."
 annex.154.a:0 "네덜란드를 해방하라"
 annex.154.b:0 "플랑드르까지 해방하라"
 annex.154.c:0 "림부르크는 합병하고 나머지를 해방하라"
@@ -671,7 +671,7 @@ annex.168.d:0 "After a short campaign across the Kuban plains, the Don Kuban Uni
 annex.168.a:0 "충성스러운 돈 쿠반 연방을 해방하라"
 annex.168.b:0 "Give them to our Russian friend"
 annex.169.t:0 "네팔의 운명"
-annex.169.d:0 "After our successful campaign in the Himalayas we now have the task to establish new local administrative authority in order to restore peace in Katmandu. What shall we do?"
+annex.169.d:0 "히말라야에서의 성공적인 작전 끝에, 우리는 카트만두에 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 어떻게 할까요?"
 annex.169.a:0 "네팔을 해방하라"
 annex.169.b:0 "Give the occupied territories to India and release the rest of Nepal"
 annex.169.c:0 "Give the occupied territories to the Bharatiyan Commune and release the rest of Nepal"
@@ -702,26 +702,26 @@ annex.175.b:0 "Transfer it to the German Union"
 annex.175.c:0 "Transfer it to Prussia"
 annex.175.e:0 "Transfer it to the Commonwealth"
 annex.176.t:0 "북서부 중국의 운명"
-annex.176.d:0 "After our successful campaign in the steppes of North-Western China we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.176.d:0 "북서부 중국의 스텝에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.176.a:0 "군사점령을 계속해라!"
 annex.176.b:0 "충성스러운 동맹에 이 땅을 넘겨주어라..."
 annex.176.c:0 "충성스러운 시베이싼마를 해방하라"
 annex.176.e:0 "충성스러운 위구리아와 시베이싼마를 해방하라"
 annex.177.t:0 "몽골의 운명"
-annex.177.d:0 "After our successful campaign in the steppes of Mongolia and beating down the mad baron we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.177.d:0 "몽골 스텝에서의 성공적인 작전으로 미친 남작을 박살낸 후, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.177.a:0 "군사점령을 계속해라!"
 annex.177.b:0 "충성스러운 동맹에 이 땅을 넘겨주어라..."
 annex.177.c:0 "충성스러운 몽골을 해방하라"
 annex.177.e:0 "트랜스-시베리아를 러시아에 반환하고 몽골을 해방하라"
 annex.178.t:0 "만주의 운명"
-annex.178.d:0 "After our successful campaign in Manchuria we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.178.d:0 "만주에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.178.a:0 "군사점령을 계속해라!"
 annex.178.b:0 "Liberate a Fengtian government"
 annex.178.c:0 "Support the local republican movement!"
 annex.178.e:0 "노동 조합 연방을 세워라!"
 annex.178.f:0 "충성스러운 동맹에 이 땅을 넘겨주어라..."
 annex.179.t:0 "상청의 운명"
-annex.179.d:0 "After our successful campaign in the mountains of Shaanxi we now have the task to establish new local administrative authority in order to restore peace, however there are several options for our choice..."
+annex.179.d:0 "산시 지방 산에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.179.a:0 "군사점령을 계속해라!"
 annex.179.b:0 "충성스러운 상청천국을 해방하라"
 annex.179.c:0 "Support the local republican movement!"
@@ -739,7 +739,7 @@ annex.181.b:0 "Break off Piratini and liberate the rest of Brazil"
 annex.182.t:0 "라플라타의 운명"
 annex.182.d:0 "After the conquest of the vast nation of La Plata we have to organise competent administrations to keep the territory under control. A question that we will have to solve is: Should we liberate Paraguay and Uruguay that were conquered by the aggressive Argentinians in 1935?"
 annex.182.a:0 "라플라타 전체를 해방하라"
-annex.182.b:0 "파라과이, 우루과이 그리고 아르헨티를 해방하라"
+annex.182.b:0 "파라과이, 우루과이 그리고 아르헨티나를 해방하라"
 annex.183.t:0 "조선의 운명"
 annex.183.d:0 "자랑스러운 한민족의 해방 이후 우리는 정복한 한국의 정부를 조직 할 책임이 있습니다. 무엇을 해야할까요?"
 annex.183.a:0 "왕실 한국을 해방하라!"
