--- a/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
@@ -2,13 +2,13 @@ l_english:
 
 ### Opinions ###
 
-support_sop:0 "SOP 들을 지원함"
-reb_in_ubd:0 "우리 괴뢰국의 안정성이 파괴됨"
-accept_help:0 "독일이 우리를 도움"
-reject_help:0 "독일이 우리를 버림"
-german_are_not_expeled:0 "우리의 요청을 거부함"
+support_sop:0 "SOP 들을 지원하다"
+reb_in_ubd:0 "우리 괴뢰국의 안정성이 파괴되다"
+accept_help:0 "독일이 우리를 돕다"
+reject_help:0 "독일이 우리를 버리다"
+german_are_not_expeled:0 "우리의 요청을 거부하다"
 traitors:0 "더러운 배신자"
-reject_ultimatum:0 "최후통첩을 거절함"
+reject_ultimatum:0 "최후통첩을 거절하다"
 
 ### Events ###
 
@@ -117,13 +117,13 @@ balticduchy.94.t:0 "사슬을 끊어라"
 balticduchy.94.d:0 "우린 자랑스러운 발트 주의 시민들이다. 우린 대독일제국의 하층민으로 오래 있었다. 이제 우리의 주인과 자유롭게 헤어질 시간이다..."
 balticduchy.94.a:0 "우리는 기다려야한다..."
 
-balticduchy.95.t:0 "발트 공국이 베를린으로부터 더 독립적이기를 원하다."
-balticduchy.95.d:0 "Due to rising tensions with Estonians, Latvians, and other minorities deprived of their political rights, Duke Adolf Friedrich has decided to accept their demands. This means that his lands won't be an easy target for German colonisation anymore, but it will also mean one less source of instability for the Ostraum. What is our stance on this?"
+balticduchy.95.t:0 "발트 공국이 베를린으로부터 더 독립적이기를 원하다"
+balticduchy.95.d:0 "에스토니아인, 라트비아인 및 기타 소수 민족이 정치적 권리를 박탈당한데 따른 긴장감으로 인해 아돌프 프리드리히 공작은 그들의 요구를 받아들이기로 결정했습니다. 이것은 그의 땅이 더 이상 독일 식민지 개척을 위한 쉬운 대상이 되지는 않을 것이라는 것을 의미하지만, 그것은 또한 오스트라움에 대한 불안정성의 원천을 의미할 것입니다. 이것에 대한 우리의 입장은 무엇입니까?"
 balticduchy.95.a:0 "의회가 이 운동을 승인한다!"
 balticduchy.95.b:0 "카이저가 공국에 분노한다"
 
 balticduchy.96.t:0 "독일 황제가 분노하다!"
-balticduchy.96.d:0 "After the Kaiser has expressed his disagreement over the type of administration in the United Baltic Duchy, the majority of Germans feel that the UBD must stay on its democratic course and friendship with Germany. Many of them however think of this is a good excuse to revert everything which has been done."
+balticduchy.96.d:0 "황제가 발트 연합 공국의 행정 유형에 대해 의견 차이를 보인 후, 대다수의 독일인들은 UBD 가 독일과의 민주적 방침과 우호를 유지해야 한다고 느끼고 있습니다. 그러나 그들 중 많은 이들은 이것이 행해진 모든 것을 되돌리기 위한 좋은 핑계라고 생각합니다."
 balticduchy.96.a:0 "모든 걸 원상복귀 시켜라!"
 balticduchy.96.b:0 "독일 황제에게 이는 발트 연합 공국의 더 나은 미래를 위함이라고 전해드려라!"
 
@@ -141,37 +141,37 @@ balticduchy.99.a:0 "의회가 이 운동을 승인한다!"
 balticduchy.99.b:0 "카이저가 공작에게 분노한다"
 
 balticduchy.100.t:0 "독일 황제가 분노하다!"
-balticduchy.100.d:0 "After the Kaiser has expressed his disagreement over the type of administration in the Baltic Federation, the majority of Germans feel that the Baltic Federation must stay on its democratic course and friendship with Germany. Many of them however think of this is a good excuse to revert everything which has been done."
+balticduchy.100.d:0 "황제가 발트 연방의 행정 유형에 대해 의견 차이를 보인 후, 대다수의 독일인들은 발트 연방이 독일과의 민주적 방침과 우호를 유지해야 한다고 느끼고 있습니다. 그러나 그들 중 많은 이들은 이것이 행해진 모든 것을 되돌리기 위한 좋은 핑계라고 생각합니다."
 balticduchy.100.a:0 "모든 걸 원상복귀 시켜라!"
 balticduchy.100.b:0 "독일 황제에게 이는 발트 연합 공국의 더 나은 미래를 위함이라고 전해드려라!"
 
 balticduchy.120.t:0 "동부 방벽 개선"
-balticduchy.120.d:0 "Our diligent engineers and soldiers have completed another part of the fortification line along the borders of United Baltic Duchy and Russia. Shall we continue with its expansion or are such fortifications sufficient?"
+balticduchy.120.d:0 "우리의 부지런한 기술자들과 병사들은 발트 연합 공국과 러시아 국경을 따라 있는 방어선의 다른 부분을 완성했습니다. 우리는 그것을 계속 확장할 것 입니까, 아니면 이 방어선만으로 충분할까요?"
 balticduchy.120.a:0 "방어를 강화하자!"
 balticduchy.120.b:0 "더 이상 필요한 건 없다"
 
 balticduchy.121.t:0 "동부 방벽의 다른 부분"
-balticduchy.121.d:0 "Our diligent engineers and soldiers have completed another part of the fortification line along the borders of United Baltic Duchy and Russia. Shall we continue with its expansion or are such fortifications sufficient?"
-balticduchy.121.a:0 "Further improve our defences!"
+balticduchy.121.d:0 "우리의 부지런한 기술자들과 병사들은 발트 연합 공국과 러시아 국경을 따라 있는 방어선의 다른 부분을 완성했습니다. 우리는 그것을 계속 확장할 것 입니까, 아니면 이 방어선만으로 충분할까요?"
+balticduchy.121.a:0 "우리의 방어를 더욱 향상시켜라!"
 
 balticduchy.122.t:0 "동부 방벽 요새화 계획이 완료되다"
-balticduchy.122.d:0 "Our diligent engineers and soldiers have completed fortification line along the borders of United Baltic Duchy and Russia. With such protections in place, our independence is surly secured."
+balticduchy.122.d:0 "우리의 부지런한 기술자들과 병사들은 발트 연합 공국과 러시아 국경을 따라 있는 방어선을 완성했습니다. 이러한 보호와 함께 우리의 독립은 확실히 보장될 것입니다."
 balticduchy.122.a:0 "훌륭하군!"
 
 balticduchy.145.t:0 "쿠를란트는 독일인의 땅이다!"
-balticduchy.145.d:0 "The Ducal Office of Immigration and Settlement reports that according to the latest census, the number of Ducal citizens of German descent in the Kurland Statistical Area has increased sharply, with settlers cementing the Ducal hold on the areas previously outside of full government control."
+balticduchy.145.d:0 "출입국 관리소의 최근 인구조사에 따르면, 정착민들이 이전에 완전한 정부 통제의 범위를 벗어나던 지역을 장악하고 있는 이주민들과 함께, 쿠를란트 통계 지구에서 독일계 혼혈인 공작 인구가 급격히 증가했다고 합니다."
 balticduchy.145.a:0 "쿠를란트는 독일인의 땅이다!"
 
 balticduchy.146.t:0 "리블란트는 독일인의 땅이다!"
-balticduchy.146.d:0 "The Ducal Office of Immigration and Settlement reports that according to the latest census, the number of Ducal citizens of German descent in the Livland Statistical Area has increased sharply, with settlers cementing the Ducal hold on the areas previously outside of full government control."
+balticduchy.146.d:0 "출입국 관리소의 최근 인구조사에 따르면, 정착민들이 이전에 완전한 정부 통제의 범위를 벗어나던 지역을 장악하고 있는 이주민들과 함께, 리블란트 통계 지구에서 독일계 혼혈인 공작 인구가 급격히 증가했다고 합니다."
 balticduchy.146.a:0 "리블란트는 독일인의 땅이다!"
 
 balticduchy.147.t:0 "에스트란트는 독일인의 땅이다!"
-balticduchy.147.d:0 "The Ducal Office of Immigration and Settlement reports that according to the latest census, the number of Ducal citizens of German descent in the Estland Statistical Area has increased sharply, with settlers cementing the Ducal hold on the areas previously outside of full government control."
+balticduchy.147.d:0 "출입국 관리소의 최근 인구조사에 따르면, 정착민들이 이전에 완전한 정부 통제의 범위를 벗어나던 지역을 장악하고 있는 이주민들과 함께, 에스트란트 통계 지구에서 독일계 혼혈인 공작 인구가 급격히 증가했다고 합니다."
 balticduchy.147.a:0 "에스트란트는 독일인의 땅이다!"
 
 balticduchy.170.t:0 "선거"
-balticduchy.170.d:0 "The new parliamentary elections are coming and thanks to our new national election system only two parties were able to make into parliament. The highly xenophobic 'Nationalist German Party' and the 'Conservative Party'. The social democrats, Baltic nationalists, and Liberal democrats were too marginal to have majority."
+balticduchy.170.d:0 "새로운 의회 선거가 치러지고 있으며 우리의 새로운 국가 선거 제도 덕분에 두 정당만이 의회에 들어갈 수 있었습니다. 외국인을 혐오하는 '독일인 민족당'과 '보수당'. 사회 민주주의자들, 발틱 민족주의자들, 자유민주당원들 역시 다수를 차지하기에는 너무 제한적이었습니다."
 balticduchy.170.a:0 "보수당"
 balticduchy.170.b:0 "독일인 민족당"
 
